<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/Silver">

                        <EditText
                            android:id="@+id/test_title"
                            android:cursorVisible="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:focusable="false"
                            android:hint="@string/test_title_hint"
                            android:textAlignment="center" />
                    </LinearLayout>


                    <TextView
                        style="?android:listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/test_date"
                        style="@style/TabelCell"
                        android:background="@color/Silver"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/before_textView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/before_bitmapBtn"
                        android:layout_alignLeft="@+id/before_bitmapBtn"
                        android:layout_alignRight="@+id/before_bitmapBtn"
                        android:layout_alignTop="@+id/before_bitmapBtn"
                        android:background="@drawable/crop"
                        android:gravity="center"
                        android:text="Tap to take BEFORE exposure"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/before_bitmapBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/after_textView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/after_bitmapBtn"
                        android:layout_alignLeft="@+id/after_bitmapBtn"
                        android:layout_alignRight="@+id/after_bitmapBtn"
                        android:layout_alignTop="@+id/after_bitmapBtn"
                        android:background="@drawable/crop"
                        android:gravity="center"
                        android:text="Tap to take AFTER exposure"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/after_bitmapBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"/>

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/test_result"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/result"
                android:textStyle="bold"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="36sp" />

            <Button
                android:id="@+id/test_uploadButton"
                style="@style/Button"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:text="@string/test_report_text" />

            <Button
                android:id="@+id/test_healthButton"
                style="@style/Button"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="Health Survey" />

            <Button
                android:id="@+id/test_resultButton"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="About Formaldehyde"
                android:textSize="30sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
